[AMQ-9235] Convert activemq-web to use j.util.Base64