@@ -22,6 +22,7 @@ import java.io.IOException;
 import java.io.ObjectInput;
 import java.io.ObjectOutput;
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
@@ -385,7 +386,7 @@ public class WebClient implements HttpSessionActivationListener, HttpSessionBind
             String[] tokens = auth.split(" ");
             if (tokens.length == 2) {
                 String encoded = tokens[1].trim();
-                String credentials = new String(javax.xml.bind.DatatypeConverter.parseBase64Binary(encoded));
+                String credentials = new String(Base64.getDecoder().decode(encoded));
                 String[] creds = credentials.split(":");
                 if (creds.length == 2) {
                     client.setUsername(creds[0]);
